# fast-excel-to-json

./: .gitignore  Cargo.toml  publish.yaml
.github/workflows/: publish.yaml
publish/: README.md  package.json
src/: lib.rs  map_to_object.rs  sheet_to_json.rs  trans_json.rs
src/excel_time_func/: excel_time_to_unix_time.rs  unix_to_iso.rs
src/trans_json/: csv_to_json.rs  excel_time_func.rs  map_to_object.rs  sheet_to_json.rs
src/trans_json/excel_time_func/: excel_time_to_unix_time.rs  unix_to_iso.rs
test/: test.js
