[package]
name = "excel_to_json"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
calamine = "0.25.0"
chrono = "0.4.38"
csv = "1.3.0"
js-sys = "0.3.70"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.125"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.43"
